--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="http://gmpg.org/xfn/11">
 
-<title>Un choix éco-responsable pour votre consommation télévisuelle – bibliophileenligne</title>
+<title>Las mejores aplicaciones de IPTV gratuitas : tonelada aplicación iptv favoritaLas mejores aplicaciones de IPTV gratuitas</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="alternate" type="application/rss+xml" title="bibliophileenligne » Flux" href="https://bibliophileenligne.kyleconstance.com/feed/">
 <link rel="alternate" type="application/rss+xml" title="bibliophileenligne » Flux des commentaires" href="https://bibliophileenligne.kyleconstance.com/comments/feed/">
